--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -29,7 +29,7 @@
     
 </head>
 <body ontouchstart="">
-    <div id="backToTop" onclick="backToTop()"><i class="fas fa-arrow-up"></i></div>
+    <div id="backToTop" onclick="backToTop()"><i class="fa-solid fa-angle-up"></i></div>
     {% include 'core/nav.html' %}
     {% include 'popup/cookie.html' %}
     <div id="allContentArea">
