--- a/apps/order/templates/core/order.html
+++ b/apps/order/templates/core/order.html
@@ -45,13 +45,13 @@
                <!-- NAME -->
                <label for="name">Navn</label>
                <br>
-               <input type="text" id="name" name="name" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+               <input type="text" id="name" name="name" value="{{ request.user.first_name }}" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
                <br>
                <br>
                <!-- EMAIL -->
                <label for="email">Epost</label>
                <br>
-               <input type="email" id="email" name="email" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
+               <input type="email" id="email" name="email" value="{{ request.user.email }}" required oninvalid="this.setCustomValidity('Kan ikke være tom')" oninput="this.setCustomValidity('')">
                <br>
                <br>
                <!-- MESSAGE -->
