--- a/apps/userprofile/templates/core/orderinfo.html
+++ b/apps/userprofile/templates/core/orderinfo.html
@@ -6,9 +6,9 @@
 <script rel="stylesheet" src="{% static '/js/orderinfo.js' %}" type="text/javascript"></script>
 
 <div class="order-full-info" id="orderFullInfo">
-    <h1 class="heading"><i class="fa-solid fa-angle-left" onclick="window.location.href='/min-bruker'"></i>&nbsp;&nbsp;&nbsp;Bestilling Info</h1>
     <div class="content">       
-        <div class="order-info-flex">
+        <h1 class="heading"><i class="fa-solid fa-angle-left" onclick="window.location.href='/min-bruker'"></i>&nbsp;&nbsp;&nbsp;Bestilling Info</h1>
+        <div class="order-info-progress">
             <div class="row-one">
                 <ul class="progress_bar">
                     {% if order.status_5 %}
@@ -53,41 +53,46 @@
             </div>
             <div class="row-two">
                 {% if order.status_1 %}
-                    <p class="one">Vi har starta bestillingen...</p>
+                    <p class="one">Vi har motatt bestillingen...</p>
                 {% endif %}    
                 {% if order.status_2 %}
-                    <p class="two">Designen er fullført</p>
+                    <p class="two">Vi har starta designen</p>
                 {% endif %}    
                 {% if order.status_3 %}
-                    <p class="three">Du har betalt</p>
+                    <p class="three">Designen er fullført</p>
+                    <p class="three">Venter på betaling...</p>
                 {% endif %}    
                 {% if order.status_4 %}
-                    <p class="four">Nettsiden er fullført</p>
+                    <p class="four">Du har betalt!</p>
+                    <p class="four">Vi har starta å lage nettsiden</p>
                 {% endif %}    
                 {% if order.status_5 %}
                     <p class="five">Alt er fullført!</p>
                 {% endif %}    
             </div>
         </div>
+        <hr>
         <div class="order-rest-info">
-            <div class="content">
-                <h1>Bestilling ID: &nbsp;<span>{{order.id}}</span></h1>
-                <h1>Bestillt: &nbsp;<span>{{order.created_at | date:"d F Y"}}</span></h1>
+            <div class="content-rest-info">
+                <div class="row-one">
+                    <h1>Bestilling ID: &nbsp;<span>{{order.id}}</span></h1>
+                    <h1>Bestillt: &nbsp;<span>{{order.created_at | date:"d F Y"}}</span></h1>
+                </div>
                 <hr>
-                <div class="is-payed margin">
-                    <h1>Betalt: &nbsp;</h1>
-                    {% if order.paid %}
-                    <div class="icon">
-                        <i class="fa-solid fa-check"></i>
-                    </div>
-                    {% else %}
+                <div class="row-two">
+                    <div class="is-payed">
+                        <h1>Betalt: &nbsp;</h1>
+                        {% if order.paid %}
+                        <div class="icon">
+                            <i class="fa-solid fa-check"></i>
+                        </div>
+                        {% else %}
                         <div class="icon-x">
                             <i class="fa-solid fa-xmark"></i>
                         </div>
-                    {% endif %}  
-                </div>
-                <div class="is-hosting margin">
-                    <div class="flex">
+                        {% endif %}  
+                    </div>
+                    <div class="is-hosting">
                         <h1>Hosting: &nbsp;</h1>
                         {% if order.hosting %}
                         <div class="icon">
@@ -97,28 +102,30 @@
                             <div class="icon-x">
                                 <i class="fa-solid fa-xmark"></i>
                             </div>
-                        {% endif %}  
+                            {% endif %}  
                     </div>
-                    <p>Ønsker du å endre dette, kontakter oss</p>
                 </div>
-                <div class="after-14-days margin">
-                    <div class="flex">
-                        <h1>Gratis endringer: &nbsp;</h1>
-                        {% if order.after_14_days %}
-                        <div class="icon">
-                            <i class="fa-solid fa-check"></i>
+                <hr>
+                <div class="row-three">
+                    <div class="after-14-days">
+                        <div class="flex">
+                            <h1>Gratis endringer: &nbsp;</h1>
+                            {% if order.after_14_days %}
+                            <div class="icon-x">
+                                <i class="fa-solid fa-xmark"></i>
+                            </div>
+                            {% else %}
+                            <div class="icon">
+                                <i class="fa-solid fa-check"></i>
+                            </div>
+                            {% endif %} 
                         </div>
+                        {% if order.is_finished %}
+                            <button onclick="window.location.href='/sporr-om-endringer'">Spørr om endringer</button>
                         {% else %}
-                        <div class="icon-x">
-                            <i class="fa-solid fa-xmark"></i>
-                        </div>
-                        {% endif %} 
+                            <div class="alert alert-info">Du kan spørre om endringer på nettsiden her, da alt er fullført</div>   
+                        {% endif %}
                     </div>
-                    {% if order.is_finished %}
-                        <button onclick="window.location.href='/sporr-om-endringer'">Spørr om endringer</button>
-                    {% else %}
-                        <div class="alert alert-info">Du kan spørre om endringer på nettsiden her, da nettsiden er fullført</div>   
-                    {% endif %}
                 </div>
             </div>
         </div>
