--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -34,10 +34,8 @@ body.menu {
 #backToTop {
   position: fixed;
   right: 15px;
-  bottom: 20px;
+  bottom: -10px;
   z-index: 110;
-  padding: 10px;
-  padding-bottom: 20px;
   -webkit-transition: .3s;
   transition: .3s;
   opacity: 0;
@@ -54,13 +52,11 @@ body.menu {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.664);
-          box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.664);
   border-radius: 4px;
+  padding: 10px 13px;
 }
 
 #backToTop i {
-  padding-top: 6px;
   font-size: 19px;
   color: white;
 }
@@ -68,6 +64,7 @@ body.menu {
 #backToTop.active {
   opacity: 1;
   pointer-events: visible;
+  bottom: 20px;
 }
 
 #backToTop.menu-active {
