--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -33,10 +33,8 @@ body{
 #backToTop{
   position: fixed;
   right: 15px;
-  bottom: 20px;
+  bottom: -10px;
   z-index: 110;
-  padding: 10px;
-  padding-bottom: 20px;
   transition: .3s;
   opacity: 0;
   pointer-events: none;
@@ -46,10 +44,10 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.664);
   border-radius: 4px;
+  padding: 10px 13px;
+
   i{
-    padding-top: 6px;
     font-size: 19px;
     color: white;
   }
@@ -57,6 +55,7 @@ body{
   &.active{
     opacity: 1;
     pointer-events: visible;
+    bottom: 20px;
   }
   &.menu-active{
     opacity: 0;
