--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -2,15 +2,19 @@
 #footer{
     width: 100%;
     height: 100%;
-    padding: 15px 30px;
+    padding-block: 15px;
     background-color: white;
     position: relative;
     padding-bottom: 35px;
     .footer-section{
         margin-bottom: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         .footer-ul{
-            width: 50%;
-            text-align: left;
+            width: 100%;
+            max-width: 380px;
+            text-align: center;
             h1{
                 color: #183B56;
                 text-shadow: 1px 0 #183B56;
@@ -22,7 +26,6 @@
             .footer-li{
                 list-style: none;
                 a{
-                    text-align: left;
                     display: inline-block;
                     width: 100%;
                     color: rgb(37, 35, 35);
@@ -42,6 +45,8 @@
         width: 100%;
         height: auto;
         margin-bottom: 42px;
+        padding-inline: 30px;
+        text-align: center;
         h1{
             color: #183B56;
             text-shadow: 1px 0 #183B56;
@@ -52,18 +57,16 @@
         }
         .icons{
             display: flex;
+            justify-content: center;
+            align-items: center;
             i{
                 transition: .3s ease-in-out;
-                border-radius: 15px;
+                border-radius: 4px;
                 font-size: 22px;
-                padding: 7px;
-                color: rgb(37, 35, 35);
-                &:nth-child(1){
-                    transform: translateX(-7px);
-                }
-                &:nth-child(2){
-                    transform: translateX(15px);
-                }
+                padding: 10px;
+                color: white;
+                background: #0082ec;
+                margin-inline: 8px;
                 &:hover{
                     background: rgba(150, 150, 150, 0.6);
                 }
@@ -79,8 +82,7 @@
         text-align: center;
         padding: 6px;
         padding-top: 12px;
-        border-top: 1px solid #0079db;
-        border-radius: 50%;
+        border-top: 1px solid #0088F9;
         p{
             padding: auto;
             margin: auto;
@@ -94,7 +96,9 @@
         width: 100%;
         height: auto;
         border-radius: 4px;
-        padding: 32px 0;
+        padding: 32px 30px;
+        background-color: white;
+        text-align: center;
         h1{
             transform: translateY(-10px);
             color: #183B56;
@@ -116,11 +120,6 @@
                 font-weight: 600;
                 height: 45px;
               }
-              label{
-                color: #183B56;
-                font-size: 15px;
-                font-weight: 800;
-              }
               button{
                 border-radius: 4px;
                 width: 180px;
@@ -130,7 +129,7 @@
                 color: white;
                 outline: none;
                 border: none;    
-                background: #0082ec;
+                background: #0088F9;
                 margin-top: 20px;
               }
         }
